--- a/WindowsFormsCars/WindowsFormsCars.csproj
+++ b/WindowsFormsCars/WindowsFormsCars.csproj
@@ -53,7 +53,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SportCar.cs" />
+    <Compile Include="Bus.cs" />
     <EmbeddedResource Include="FormCar.resx">
       <DependentUpon>FormCar.cs</DependentUpon>
     </EmbeddedResource>
