--- a/WindowsFormsCars/WindowsFormsCars.csproj
+++ b/WindowsFormsCars/WindowsFormsCars.csproj
@@ -45,17 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormCar.cs">
+    <Compile Include="Directions.cs" />
+    <Compile Include="FormBus.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormCar.Designer.cs">
-      <DependentUpon>FormCar.cs</DependentUpon>
+    <Compile Include="FormBus.Designer.cs">
+      <DependentUpon>FormBus.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bus.cs" />
-    <EmbeddedResource Include="FormCar.resx">
-      <DependentUpon>FormCar.cs</DependentUpon>
+    <EmbeddedResource Include="FormBus.resx">
+      <DependentUpon>FormBus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
