--- a/WindowsFormsCars/WindowsFormsCars.csproj
+++ b/WindowsFormsCars/WindowsFormsCars.csproj
@@ -47,19 +47,19 @@
   <ItemGroup>
     <Compile Include="Bus.cs" />
     <Compile Include="DirectionClass.cs" />
-    <Compile Include="FormCar.cs">
+    <Compile Include="FormBus.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormCar.Designer.cs">
-      <DependentUpon>FormCar.cs</DependentUpon>
+    <Compile Include="FormBus.Designer.cs">
+      <DependentUpon>FormBus.cs</DependentUpon>
     </Compile>
     <Compile Include="ITransport.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DoubleBus.cs" />
     <Compile Include="Vehicle.cs" />
-    <EmbeddedResource Include="FormCar.resx">
-      <DependentUpon>FormCar.cs</DependentUpon>
+    <EmbeddedResource Include="FormBus.resx">
+      <DependentUpon>FormBus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
