--- a/WindowsFormsCars/WindowsFormsCars.csproj
+++ b/WindowsFormsCars/WindowsFormsCars.csproj
@@ -47,11 +47,11 @@
   <ItemGroup>
     <Compile Include="Bus.cs" />
     <Compile Include="DirectionClass.cs" />
-    <Compile Include="FormCar.cs">
+    <Compile Include="FormBus.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormCar.Designer.cs">
-      <DependentUpon>FormCar.cs</DependentUpon>
+    <Compile Include="FormBus.Designer.cs">
+      <DependentUpon>FormBus.cs</DependentUpon>
     </Compile>
     <Compile Include="FormParking.cs">
       <SubType>Form</SubType>
@@ -65,8 +65,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DoubleBus.cs" />
     <Compile Include="Vehicle.cs" />
-    <EmbeddedResource Include="FormCar.resx">
-      <DependentUpon>FormCar.cs</DependentUpon>
+    <EmbeddedResource Include="FormBus.resx">
+      <DependentUpon>FormBus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormParking.resx">
       <DependentUpon>FormParking.cs</DependentUpon>
